2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/i386/pc/pxe.c (GRUB_MOD_INIT): Fix typo.
	Reported by: Pavel Pisa.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* io/gzio.c (grub_gzio_open): Use grub_zalloc.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Merge grub_ieee1275_map_physical into grub_map and rename to
	grub_ieee1275_map

	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_map): New proto.
	* include/grub/sparc64/ieee1275/ieee1275.h (grub_ieee1275_map_physical):
	Remove.
	* kern/ieee1275/openfw.c (grub_map): Rename to ...
	(grub_ieee1275_map): ... this. All users updated. Add phys_lo when
	necessary.
	* kern/sparc64/ieee1275/ieee1275.c (grub_ieee1275_map_physical): Remove.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/ieee1275/ofdisk.c (grub_ofdisk_open): Check device type before
	opening and not after.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Macroify
	constants.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/sparc64/ieee1275/linux.c (align_addr): Remove.
	(alloc_phys): Use ALIGN_UP instead of align_addr.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/sparc64/ieee1275/linux.c (alloc_phys): Correct bounds checking.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/sparc64/ieee1275/crt0.S (codestart): Move modules backwards.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/ieee1275/ofdisk.c (grub_ofdisk_read): Remove excessively
	verbose dprintf.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix over-4GiB seek on sparc64.

	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_seek):
	Replace pos_i and pos_lo with pos. All users updated.
	* include/grub/powerpc/ieee1275/ieee1275.h (GRUB_IEEE1275_CELL_SIZEOF):
	New constant.
	* include/grub/sparc64/ieee1275/ieee1275.h (GRUB_IEEE1275_CELL_SIZEOF):
	Likewise.